<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="number_of_deceased">Number of Deceased</string>
    <string name="deceased">Deceased</string>
    <string name="number_of_recovered">Number of Recovered</string>
    <string name="number_of_cases">Number of Cases</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="state_name">State Name</string>
    <string name="world_wide_record">World Wide Record</string>
    <string name="number_of_deceased___">Number of Deceased</string>
    <string name="number_of_deceased__">Number of Deceased</string>
    <string name="cases_">Cases</string>
    <string name="number_of_cases_">Number of Cases</string>
    <string name="recovered_">Recovered</string>
    <string name="deceased_">Deceased</string>
    <string name="india_record_">India Record</string>
    <string name="cases__">Cases</string>
    <string name="number_of_cases__">Number of Cases</string>
    <string name="recovered__">Recovered</string>
    <string name="deceased__">Deceased</string>
    <string name="number_of_recovered_">Number of Recovered</string>
    <string name="number_of_recovered__">Number of Recovered</string>
</resources>