<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_name"
            android:id="@+id/idTVState"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cases"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_cases"
                    android:id="@+id/idTVCases"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blue"
                    android:padding="4dp"
                    android:textSize="12sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recovered"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/idTVRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/number_of_recovered"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/deceased"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/idTVDeceased"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/number_of_deceased"
                    android:textAlignment="center"
                    android:textColor="#DD2C00"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>